tests/baselines/reference/objectLiteralsAgainstUnionsOfArrays01.errors.txt
tests/cases/compiler/objectLiteralsAgainstUnionsOfArrays01.ts(10,5): error TS2322: Type '{ prop: number; }' is not assignable to type 'Bar | Bar[]'.
  Type '{ prop: number; }' is not assignable to type 'Bar'.
    Types of property 'prop' are incompatible.
      Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/objectLiteralsAgainstUnionsOfArrays01.ts (1 errors) ====
    interface Foo {
      bar: Bar | Bar[];
    }
    
    interface Bar {
      prop: string;
    }
    
    let x: Foo[] = [
      { bar: { prop: 100 } }
        ~~~
!!! error TS2322: Type '{ prop: number; }' is not assignable to type 'Bar | Bar[]'.
!!! error TS2322:   Type '{ prop: number; }' is not assignable to type 'Bar'.
!!! error TS2322:     Types of property 'prop' are incompatible.
!!! error TS2322:       Type 'number' is not assignable to type 'string'.
!!! related TS6500 tests/cases/compiler/objectLiteralsAgainstUnionsOfArrays01.ts:2:3: The expected type comes from property 'bar' which is declared here on type 'Foo'
    ]
    